--- a/Client-cloudAh/package.json
+++ b/Client-cloudAh/package.json
@@ -20,6 +20,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.2",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.6.1",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
