--- a/Client-cloudAh/package.json
+++ b/Client-cloudAh/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.3.4",
     "moment": "^2.29.4",
     "numeral": "^2.0.6",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
